# NitroCppTest-FabioRobertoDaSilva

./: CMakeLists.txt  README.md  main.cpp
cmake/: googletest.cmake
include/: rectangle.h  rectangles_mactches.h  rectangles_matches.h
src/: CMakeLists.txt  main.cpp  rectangle.cpp  rectangles_mactches.cpp  rectangles_matches.cpp
test/: CMakeLists.txt  add_rectange_invalid.cpp  add_rectange_valid.cpp  ctor_negative_height.cpp  ctor_negative_width.cpp  ctor_negative_x.cpp  ctor_negative_y.cpp  ctor_no_height.cpp  ctor_no_params.cpp  ctor_no_width.cpp  ctor_ok.cpp  equal_optor_invalid_vs_invalid_true.cpp  equal_optor_invalid_vs_valid_false.cpp  equal_optor_valid_vs_valid_false.cpp  equal_optor_valid_vs_valid_true.cpp  get_intersection_false.cpp  get_intersection_false_limit_x.cpp  get_intersection_false_limit_y.cpp  get_intersection_true.cpp  get_intersection_true_limit_x.cpp  get_intersection_true_limit_y.cpp  get_intersection_true_verified.cpp  intersction_false.cpp  intersction_true.cpp  matches_test.cpp  nitro_rectangles_matches_test.cpp  ostream_operator_1.cpp  ostream_operator_2.cpp  ostream_operator_3.cpp  ostream_optor_negative_height.cpp  ostream_optor_negative_widht.cpp  ostream_optor_negative_x.cpp  ostream_optor_negative_y.cpp  ostream_optor_negavite_widht.cpp  ostream_optor_no_height.cpp  ostream_optor_no_values.cpp  ostream_optor_no_widht.cpp  ostream_optor_ok.cpp  rectangle_test.cpp  test.out  (+7 more)
test/cases/: test.json  test10.json  test2.json  test3.json  test3.out  test4.json  test4.out  test5.json  test6.json  test6.out  test7.out  test8.json  test9.json
